Fixed "Unstuck all" button style. Repared bug in deleting current active tasks from the database. Now working properly.

--- a/MScResearchTool.Server/MScResearchTool.Server.Web/wwwroot/css/site.css
+++ b/MScResearchTool.Server/MScResearchTool.Server.Web/wwwroot/css/site.css
@@ -10,7 +10,7 @@
     -webkit-font-smoothing: antialiased;
 }
 
-input, select{
+input, select {
     width: 100%;
 }
 
@@ -53,6 +53,44 @@ button.block-button {
     -moz-appearance: none;
 }
 
+.pinned-button {
+    color: #fff;
+    text-decoration: none;
+    transition-duration: .3s;
+    -webkit-transition-duration: .4s;
+    -moz-transition-duration: .4s;
+    background-color: #6a6a6a;
+    padding: 5px 30px;
+    width: 100%;
+    cursor: pointer;
+    margin: 0 50px 0 0;
+    border: 1px solid #fff;
+    position: absolute;
+    left: 0;
+    top: 50px;
+}
+
+    .pinned-button:hover {
+        color: #000;
+        background-color: #33BCBA;
+        transition-duration: .3s;
+        -webkit-transition-duration: .4s;
+        -moz-transition-duration: .4s;
+        text-decoration: none;
+    }
+
+    .pinned-button:visited, .pinned-button:active {
+        text-decoration: none;
+        color: #fff;
+        background-color: #6a6a6a;
+    }
+
+    .pinned-button:focus {
+        text-decoration: none;
+        color: #000;
+        background-color: #33BCBA;
+    }
+
 .info-button {
     color: #fff;
     text-decoration: none;
@@ -91,11 +129,11 @@ button.block-button {
 .info-container {
     border-style: groove;
     border-width: 1px 1px 1px 1px;
-    text-align:center;
+    text-align: center;
 }
 
-.info-value{
-    text-align:center;
+.info-value {
+    text-align: center;
 }
 
 .navbar-inverse {
